tp_y.output
Grammaire

    0 $accept: Programme $end

    1 Programme: DefClasseObjetOpt Bloc

    2 DefClasseObjetOpt: DefClasseObjet
    3                  | %empty

    4 DefClasseObjet: ObjetouClasse DefClasseObjet
    5               | ObjetouClasse

    6 ObjetouClasse: Objet
    7              | Classe

    8 Objet: OBJ ClassId IS '{' ListChampOpt ListMethodeOpt '}'

    9 BlocOpt: Bloc
   10        | %empty

   11 Bloc: '{' ListInstructionsOpt '}'
   12     | '{' ListChamp IS ListInstructions '}'

   13 ListInstructionsOpt: ListInstructions
   14                    | %empty

   15 ListInstructions: Instruction ListInstructions
   16                 | Instruction

   17 Instruction: Expression ';'
   18            | RETURN ';'
   19            | ArgumentOuCible AFF Expression ';'
   20            | IF Operation THEN InstIfElse ELSE InstIfElse

   21 InstIfElse: Instruction
   22           | Bloc

   23 Expression: Instanciation
   24           | Operation

   25 Operation: Operation RelOp Operation
   26          | Operation ADD Operation
   27          | Operation SUB Operation
   28          | Operation PROD Operation
   29          | Operation QUOT Operation
   30          | Operation REST Operation
   31          | Operation AND Operation
   32          | ADD Operation
   33          | SUB Operation
   34          | ArgumentOuCible

   35 Instanciation: NEW ClassId '(' ListArgumentsOpt ')'

   36 Classe: CLASS ClassId '(' ListParametreOpt ')' ExtendsOpt BlocOpt IS CorpsClasse

   37 CorpsClasse: '{' ListChampOpt ListMethodeOpt '}'

   38 ListMethodeOpt: ListMethode
   39               | %empty

   40 ListMethode: Methode ListMethode
   41            | Methode

   42 Methode: OverrideOpt DEF Id '(' ListParametreOpt ')' ':' ClassId AFF Expression
   43        | OverrideOpt DEF Id '(' ListParametreOpt ')' NomClasseOpt IS Bloc

   44 NomClasseOpt: ':' ClassId
   45             | %empty

   46 ListParametreOpt: ListParametres
   47                 | ListParametresDef
   48                 | %empty

   49 ListParametres: Parametre ',' ListParametres
   50               | Parametre ',' ListParametresDef
   51               | Parametre

   52 Parametre: VarOpt Id ':' ClassId

   53 ListParametresDef: ParametreDef ',' ListParametresDef
   54                  | ParametreDef

   55 ParametreDef: VarOpt Id ':' ClassId AFF Expression

   56 VarOpt: VAR
   57       | %empty

   58 DeclExpressionOpt: AFF Expression
   59                  | %empty

   60 ExtendsOpt: Extends
   61           | %empty

   62 Extends: EXTENDS ClassId '(' ListArgumentsOpt ')'

   63 ListArgumentsOpt: ListArguments
   64                 | %empty

   65 ListArguments: Expression ',' ListArguments
   66              | Expression

   67 ArgumentOuCible: ListSelection
   68                | ThisSelect
   69                | Cste
   70                | Selection

   71 ThisSelect: THIS DOT ListSelection
   72           | THIS DOT Selection
   73           | THIS

   74 ListSelection: SelWithClassID DOT Selection

   75 SelWithClassID: ListSelection
   76               | Selection
   77               | ClassId

   78 Selection: Id
   79          | Message
   80          | Cstr
   81          | '(' Expression ')'
   82          | '(' ClassId Expression ')'

   83 Message: Id '(' ListArgumentsOpt ')'

   84 ListChampOpt: ListChamp
   85             | %empty

   86 ListChamp: Champ ListChamp
   87          | Champ

   88 Champ: VAR Id ':' ClassId DeclExpressionOpt ';'

   89 OverrideOpt: OVERRIDE
   90            | %empty


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 35 36 42 43 62 81 82 83
')' (41) 35 36 42 43 62 81 82 83
',' (44) 49 50 53 65
':' (58) 42 44 52 55 88
';' (59) 17 18 19 88
'{' (123) 8 11 12 37
'}' (125) 8 11 12 37
error (256)
IS (258) 8 12 36 43
CLASS (259) 36
VAR (260) 56 88
EXTENDS (261) 62
DEF (262) 42 43
OVERRIDE (263) 89
IF (264) 20
THEN (265) 20
ELSE (266) 20
AFF (267) 19 42 55 58
RETURN (268) 18
OBJ (269) 8
ADD (270) 26 32
SUB (271) 27 33
PROD (272) 28
QUOT (273) 29
REST (274) 30
NEW (275) 35
DOT (276) 71 72 74
AND (277) 31
Id (278) 42 43 52 55 78 83 88
ClassId (279) 8 35 36 42 44 52 55 62 77 82 88
Cstr (280) 80
Cste (281) 69
RelOp (282) 25
THIS (283) 71 72 73


Non-terminaux, suivis des règles où ils apparaissent

$accept (36)
    à gauche: 0
Programme (37)
    à gauche: 1, à droite: 0
DefClasseObjetOpt (38)
    à gauche: 2 3, à droite: 1
DefClasseObjet (39)
    à gauche: 4 5, à droite: 2 4
ObjetouClasse (40)
    à gauche: 6 7, à droite: 4 5
Objet (41)
    à gauche: 8, à droite: 6
BlocOpt (42)
    à gauche: 9 10, à droite: 36
Bloc (43)
    à gauche: 11 12, à droite: 1 9 22 43
ListInstructionsOpt (44)
    à gauche: 13 14, à droite: 11
ListInstructions (45)
    à gauche: 15 16, à droite: 12 13 15
Instruction (46)
    à gauche: 17 18 19 20, à droite: 15 16 21
InstIfElse (47)
    à gauche: 21 22, à droite: 20
Expression (48)
    à gauche: 23 24, à droite: 17 19 42 55 58 65 66 81 82
Operation (49)
    à gauche: 25 26 27 28 29 30 31 32 33 34, à droite: 20 24 25 26
    27 28 29 30 31 32 33
Instanciation (50)
    à gauche: 35, à droite: 23
Classe (51)
    à gauche: 36, à droite: 7
CorpsClasse (52)
    à gauche: 37, à droite: 36
ListMethodeOpt (53)
    à gauche: 38 39, à droite: 8 37
ListMethode (54)
    à gauche: 40 41, à droite: 38 40
Methode (55)
    à gauche: 42 43, à droite: 40 41
NomClasseOpt (56)
    à gauche: 44 45, à droite: 43
ListParametreOpt (57)
    à gauche: 46 47 48, à droite: 36 42 43
ListParametres (58)
    à gauche: 49 50 51, à droite: 46 49
Parametre (59)
    à gauche: 52, à droite: 49 50 51
ListParametresDef (60)
    à gauche: 53 54, à droite: 47 50 53
ParametreDef (61)
    à gauche: 55, à droite: 53 54
VarOpt (62)
    à gauche: 56 57, à droite: 52 55
DeclExpressionOpt (63)
    à gauche: 58 59, à droite: 88
ExtendsOpt (64)
    à gauche: 60 61, à droite: 36
Extends (65)
    à gauche: 62, à droite: 60
ListArgumentsOpt (66)
    à gauche: 63 64, à droite: 35 62 83
ListArguments (67)
    à gauche: 65 66, à droite: 63 65
ArgumentOuCible (68)
    à gauche: 67 68 69 70, à droite: 19 34
ThisSelect (69)
    à gauche: 71 72 73, à droite: 68
ListSelection (70)
    à gauche: 74, à droite: 67 71 75
SelWithClassID (71)
    à gauche: 75 76 77, à droite: 74
Selection (72)
    à gauche: 78 79 80 81 82, à droite: 70 72 74 76
Message (73)
    à gauche: 83, à droite: 79
ListChampOpt (74)
    à gauche: 84 85, à droite: 8 37
ListChamp (75)
    à gauche: 86 87, à droite: 12 84 86
Champ (76)
    à gauche: 88, à droite: 86 87
OverrideOpt (77)
    à gauche: 89 90, à droite: 42 43


État 0

    0 $accept: . Programme $end

    CLASS  décalage et aller à l'état 1
    OBJ    décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 3 (DefClasseObjetOpt)

    Programme          aller à l'état 3
    DefClasseObjetOpt  aller à l'état 4
    DefClasseObjet     aller à l'état 5
    ObjetouClasse      aller à l'état 6
    Objet              aller à l'état 7
    Classe             aller à l'état 8


État 1

   36 Classe: CLASS . ClassId '(' ListParametreOpt ')' ExtendsOpt BlocOpt IS CorpsClasse

    ClassId  décalage et aller à l'état 9


État 2

    8 Objet: OBJ . ClassId IS '{' ListChampOpt ListMethodeOpt '}'

    ClassId  décalage et aller à l'état 10


État 3

    0 $accept: Programme . $end

    $end  décalage et aller à l'état 11


État 4

    1 Programme: DefClasseObjetOpt . Bloc

    '{'  décalage et aller à l'état 12

    Bloc  aller à l'état 13


État 5

    2 DefClasseObjetOpt: DefClasseObjet .

    $défaut  réduction par utilisation de la règle 2 (DefClasseObjetOpt)


État 6

    4 DefClasseObjet: ObjetouClasse . DefClasseObjet
    5               | ObjetouClasse .

    CLASS  décalage et aller à l'état 1
    OBJ    décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 5 (DefClasseObjet)

    DefClasseObjet  aller à l'état 14
    ObjetouClasse   aller à l'état 6
    Objet           aller à l'état 7
    Classe          aller à l'état 8


État 7

    6 ObjetouClasse: Objet .

    $défaut  réduction par utilisation de la règle 6 (ObjetouClasse)


État 8

    7 ObjetouClasse: Classe .

    $défaut  réduction par utilisation de la règle 7 (ObjetouClasse)


État 9

   36 Classe: CLASS ClassId . '(' ListParametreOpt ')' ExtendsOpt BlocOpt IS CorpsClasse

    '('  décalage et aller à l'état 15


État 10

    8 Objet: OBJ ClassId . IS '{' ListChampOpt ListMethodeOpt '}'

    IS  décalage et aller à l'état 16


État 11

    0 $accept: Programme $end .

    $défaut  accepter


État 12

   11 Bloc: '{' . ListInstructionsOpt '}'
   12     | '{' . ListChamp IS ListInstructions '}'

    VAR      décalage et aller à l'état 17
    IF       décalage et aller à l'état 18
    RETURN   décalage et aller à l'état 19
    ADD      décalage et aller à l'état 20
    SUB      décalage et aller à l'état 21
    NEW      décalage et aller à l'état 22
    Id       décalage et aller à l'état 23
    ClassId  décalage et aller à l'état 24
    Cstr     décalage et aller à l'état 25
    Cste     décalage et aller à l'état 26
    THIS     décalage et aller à l'état 27
    '('      décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 14 (ListInstructionsOpt)

    ListInstructionsOpt  aller à l'état 29
    ListInstructions     aller à l'état 30
    Instruction          aller à l'état 31
    Expression           aller à l'état 32
    Operation            aller à l'état 33
    Instanciation        aller à l'état 34
    ArgumentOuCible      aller à l'état 35
    ThisSelect           aller à l'état 36
    ListSelection        aller à l'état 37
    SelWithClassID       aller à l'état 38
    Selection            aller à l'état 39
    Message              aller à l'état 40
    ListChamp            aller à l'état 41
    Champ                aller à l'état 42


État 13

    1 Programme: DefClasseObjetOpt Bloc .

    $défaut  réduction par utilisation de la règle 1 (Programme)


État 14

    4 DefClasseObjet: ObjetouClasse DefClasseObjet .

    $défaut  réduction par utilisation de la règle 4 (DefClasseObjet)


État 15

   36 Classe: CLASS ClassId '(' . ListParametreOpt ')' ExtendsOpt BlocOpt IS CorpsClasse

    VAR  décalage et aller à l'état 43

    Id        réduction par utilisation de la règle 57 (VarOpt)
    $défaut  réduction par utilisation de la règle 48 (ListParametreOpt)

    ListParametreOpt   aller à l'état 44
    ListParametres     aller à l'état 45
    Parametre          aller à l'état 46
    ListParametresDef  aller à l'état 47
    ParametreDef       aller à l'état 48
    VarOpt             aller à l'état 49


État 16

    8 Objet: OBJ ClassId IS . '{' ListChampOpt ListMethodeOpt '}'

    '{'  décalage et aller à l'état 50


État 17

   88 Champ: VAR . Id ':' ClassId DeclExpressionOpt ';'

    Id  décalage et aller à l'état 51


État 18

   20 Instruction: IF . Operation THEN InstIfElse ELSE InstIfElse

    ADD      décalage et aller à l'état 20
    SUB      décalage et aller à l'état 21
    Id       décalage et aller à l'état 23
    ClassId  décalage et aller à l'état 24
    Cstr     décalage et aller à l'état 25
    Cste     décalage et aller à l'état 26
    THIS     décalage et aller à l'état 27
    '('      décalage et aller à l'état 28

    Operation        aller à l'état 52
    ArgumentOuCible  aller à l'état 53
    ThisSelect       aller à l'état 36
    ListSelection    aller à l'état 37
    SelWithClassID   aller à l'état 38
    Selection        aller à l'état 39
    Message          aller à l'état 40


État 19

   18 Instruction: RETURN . ';'

    ';'  décalage et aller à l'état 54


État 20

   32 Operation: ADD . Operation

    ADD      décalage et aller à l'état 20
    SUB      décalage et aller à l'état 21
    Id       décalage et aller à l'état 23
    ClassId  décalage et aller à l'état 24
    Cstr     décalage et aller à l'état 25
    Cste     décalage et aller à l'état 26
    THIS     décalage et aller à l'état 27
    '('      décalage et aller à l'état 28

    Operation        aller à l'état 55
    ArgumentOuCible  aller à l'état 53
    ThisSelect       aller à l'état 36
    ListSelection    aller à l'état 37
    SelWithClassID   aller à l'état 38
    Selection        aller à l'état 39
    Message          aller à l'état 40


État 21

   33 Operation: SUB . Operation

    ADD      décalage et aller à l'état 20
    SUB      décalage et aller à l'état 21
    Id       décalage et aller à l'état 23
    ClassId  décalage et aller à l'état 24
    Cstr     décalage et aller à l'état 25
    Cste     décalage et aller à l'état 26
    THIS     décalage et aller à l'état 27
    '('      décalage et aller à l'état 28

    Operation        aller à l'état 56
    ArgumentOuCible  aller à l'état 53
    ThisSelect       aller à l'état 36
    ListSelection    aller à l'état 37
    SelWithClassID   aller à l'état 38
    Selection        aller à l'état 39
    Message          aller à l'état 40


État 22

   35 Instanciation: NEW . ClassId '(' ListArgumentsOpt ')'

    ClassId  décalage et aller à l'état 57


État 23

   78 Selection: Id .
   83 Message: Id . '(' ListArgumentsOpt ')'

    '('  décalage et aller à l'état 58

    $défaut  réduction par utilisation de la règle 78 (Selection)


État 24

   77 SelWithClassID: ClassId .

    $défaut  réduction par utilisation de la règle 77 (SelWithClassID)


État 25

   80 Selection: Cstr .

    $défaut  réduction par utilisation de la règle 80 (Selection)


État 26

   69 ArgumentOuCible: Cste .

    $défaut  réduction par utilisation de la règle 69 (ArgumentOuCible)


État 27

   71 ThisSelect: THIS . DOT ListSelection
   72           | THIS . DOT Selection
   73           | THIS .

    DOT  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 73 (ThisSelect)


État 28

   81 Selection: '(' . Expression ')'
   82          | '(' . ClassId Expression ')'

    ADD      décalage et aller à l'état 20
    SUB      décalage et aller à l'état 21
    NEW      décalage et aller à l'état 22
    Id       décalage et aller à l'état 23
    ClassId  décalage et aller à l'état 60
    Cstr     décalage et aller à l'état 25
    Cste     décalage et aller à l'état 26
    THIS     décalage et aller à l'état 27
    '('      décalage et aller à l'état 28

    Expression       aller à l'état 61
    Operation        aller à l'état 33
    Instanciation    aller à l'état 34
    ArgumentOuCible  aller à l'état 53
    ThisSelect       aller à l'état 36
    ListSelection    aller à l'état 37
    SelWithClassID   aller à l'état 38
    Selection        aller à l'état 39
    Message          aller à l'état 40


État 29

   11 Bloc: '{' ListInstructionsOpt . '}'

    '}'  décalage et aller à l'état 62


État 30

   13 ListInstructionsOpt: ListInstructions .

    $défaut  réduction par utilisation de la règle 13 (ListInstructionsOpt)


État 31

   15 ListInstructions: Instruction . ListInstructions
   16                 | Instruction .

    IF       décalage et aller à l'état 18
    RETURN   décalage et aller à l'état 19
    ADD      décalage et aller à l'état 20
    SUB      décalage et aller à l'état 21
    NEW      décalage et aller à l'état 22
    Id       décalage et aller à l'état 23
    ClassId  décalage et aller à l'état 24
    Cstr     décalage et aller à l'état 25
    Cste     décalage et aller à l'état 26
    THIS     décalage et aller à l'état 27
    '('      décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 16 (ListInstructions)

    ListInstructions  aller à l'état 63
    Instruction       aller à l'état 31
    Expression        aller à l'état 32
    Operation         aller à l'état 33
    Instanciation     aller à l'état 34
    ArgumentOuCible   aller à l'état 35
    ThisSelect        aller à l'état 36
    ListSelection     aller à l'état 37
    SelWithClassID    aller à l'état 38
    Selection         aller à l'état 39
    Message           aller à l'état 40


État 32

   17 Instruction: Expression . ';'

    ';'  décalage et aller à l'état 64


État 33

   24 Expression: Operation .
   25 Operation: Operation . RelOp Operation
   26          | Operation . ADD Operation
   27          | Operation . SUB Operation
   28          | Operation . PROD Operation
   29          | Operation . QUOT Operation
   30          | Operation . REST Operation
   31          | Operation . AND Operation

    ADD    décalage et aller à l'état 65
    SUB    décalage et aller à l'état 66
    PROD   décalage et aller à l'état 67
    QUOT   décalage et aller à l'état 68
    REST   décalage et aller à l'état 69
    AND    décalage et aller à l'état 70
    RelOp  décalage et aller à l'état 71

    $défaut  réduction par utilisation de la règle 24 (Expression)


État 34

   23 Expression: Instanciation .

    $défaut  réduction par utilisation de la règle 23 (Expression)


État 35

   19 Instruction: ArgumentOuCible . AFF Expression ';'
   34 Operation: ArgumentOuCible .

    AFF  décalage et aller à l'état 72

    $défaut  réduction par utilisation de la règle 34 (Operation)


État 36

   68 ArgumentOuCible: ThisSelect .

    $défaut  réduction par utilisation de la règle 68 (ArgumentOuCible)


État 37

   67 ArgumentOuCible: ListSelection .
   75 SelWithClassID: ListSelection .

    DOT       réduction par utilisation de la règle 75 (SelWithClassID)
    $défaut  réduction par utilisation de la règle 67 (ArgumentOuCible)


État 38

   74 ListSelection: SelWithClassID . DOT Selection

    DOT  décalage et aller à l'état 73


État 39

   70 ArgumentOuCible: Selection .
   76 SelWithClassID: Selection .

    DOT       réduction par utilisation de la règle 76 (SelWithClassID)
    $défaut  réduction par utilisation de la règle 70 (ArgumentOuCible)


État 40

   79 Selection: Message .

    $défaut  réduction par utilisation de la règle 79 (Selection)


État 41

   12 Bloc: '{' ListChamp . IS ListInstructions '}'

    IS  décalage et aller à l'état 74


État 42

   86 ListChamp: Champ . ListChamp
   87          | Champ .

    VAR  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 87 (ListChamp)

    ListChamp  aller à l'état 75
    Champ      aller à l'état 42


État 43

   56 VarOpt: VAR .

    $défaut  réduction par utilisation de la règle 56 (VarOpt)


État 44

   36 Classe: CLASS ClassId '(' ListParametreOpt . ')' ExtendsOpt BlocOpt IS CorpsClasse

    ')'  décalage et aller à l'état 76


État 45

   46 ListParametreOpt: ListParametres .

    $défaut  réduction par utilisation de la règle 46 (ListParametreOpt)


État 46

   49 ListParametres: Parametre . ',' ListParametres
   50               | Parametre . ',' ListParametresDef
   51               | Parametre .

    ','  décalage et aller à l'état 77

    $défaut  réduction par utilisation de la règle 51 (ListParametres)


État 47

   47 ListParametreOpt: ListParametresDef .

    $défaut  réduction par utilisation de la règle 47 (ListParametreOpt)


État 48

   53 ListParametresDef: ParametreDef . ',' ListParametresDef
   54                  | ParametreDef .

    ','  décalage et aller à l'état 78

    $défaut  réduction par utilisation de la règle 54 (ListParametresDef)


État 49

   52 Parametre: VarOpt . Id ':' ClassId
   55 ParametreDef: VarOpt . Id ':' ClassId AFF Expression

    Id  décalage et aller à l'état 79


État 50

    8 Objet: OBJ ClassId IS '{' . ListChampOpt ListMethodeOpt '}'

    VAR  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 85 (ListChampOpt)

    ListChampOpt  aller à l'état 80
    ListChamp     aller à l'état 81
    Champ         aller à l'état 42


État 51

   88 Champ: VAR Id . ':' ClassId DeclExpressionOpt ';'

    ':'  décalage et aller à l'état 82


État 52

   20 Instruction: IF Operation . THEN InstIfElse ELSE InstIfElse
   25 Operation: Operation . RelOp Operation
   26          | Operation . ADD Operation
   27          | Operation . SUB Operation
   28          | Operation . PROD Operation
   29          | Operation . QUOT Operation
   30          | Operation . REST Operation
   31          | Operation . AND Operation

    THEN   décalage et aller à l'état 83
    ADD    décalage et aller à l'état 65
    SUB    décalage et aller à l'état 66
    PROD   décalage et aller à l'état 67
    QUOT   décalage et aller à l'état 68
    REST   décalage et aller à l'état 69
    AND    décalage et aller à l'état 70
    RelOp  décalage et aller à l'état 71


État 53

   34 Operation: ArgumentOuCible .

    $défaut  réduction par utilisation de la règle 34 (Operation)


État 54

   18 Instruction: RETURN ';' .

    $défaut  réduction par utilisation de la règle 18 (Instruction)


État 55

   25 Operation: Operation . RelOp Operation
   26          | Operation . ADD Operation
   27          | Operation . SUB Operation
   28          | Operation . PROD Operation
   29          | Operation . QUOT Operation
   30          | Operation . REST Operation
   31          | Operation . AND Operation
   32          | ADD Operation .

    PROD  décalage et aller à l'état 67
    QUOT  décalage et aller à l'état 68
    REST  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 32 (Operation)


État 56

   25 Operation: Operation . RelOp Operation
   26          | Operation . ADD Operation
   27          | Operation . SUB Operation
   28          | Operation . PROD Operation
   29          | Operation . QUOT Operation
   30          | Operation . REST Operation
   31          | Operation . AND Operation
   33          | SUB Operation .

    PROD  décalage et aller à l'état 67
    QUOT  décalage et aller à l'état 68
    REST  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 33 (Operation)


État 57

   35 Instanciation: NEW ClassId . '(' ListArgumentsOpt ')'

    '('  décalage et aller à l'état 84


État 58

   83 Message: Id '(' . ListArgumentsOpt ')'

    ADD      décalage et aller à l'état 20
    SUB      décalage et aller à l'état 21
    NEW      décalage et aller à l'état 22
    Id       décalage et aller à l'état 23
    ClassId  décalage et aller à l'état 24
    Cstr     décalage et aller à l'état 25
    Cste     décalage et aller à l'état 26
    THIS     décalage et aller à l'état 27
    '('      décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 64 (ListArgumentsOpt)

    Expression        aller à l'état 85
    Operation         aller à l'état 33
    Instanciation     aller à l'état 34
    ListArgumentsOpt  aller à l'état 86
    ListArguments     aller à l'état 87
    ArgumentOuCible   aller à l'état 53
    ThisSelect        aller à l'état 36
    ListSelection     aller à l'état 37
    SelWithClassID    aller à l'état 38
    Selection         aller à l'état 39
    Message           aller à l'état 40


État 59

   71 ThisSelect: THIS DOT . ListSelection
   72           | THIS DOT . Selection

    Id       décalage et aller à l'état 23
    ClassId  décalage et aller à l'état 24
    Cstr     décalage et aller à l'état 25
    '('      décalage et aller à l'état 28

    ListSelection   aller à l'état 88
    SelWithClassID  aller à l'état 38
    Selection       aller à l'état 89
    Message         aller à l'état 40


État 60

   77 SelWithClassID: ClassId .
   82 Selection: '(' ClassId . Expression ')'

    ADD      décalage et aller à l'état 20
    SUB      décalage et aller à l'état 21
    NEW      décalage et aller à l'état 22
    Id       décalage et aller à l'état 23
    ClassId  décalage et aller à l'état 24
    Cstr     décalage et aller à l'état 25
    Cste     décalage et aller à l'état 26
    THIS     décalage et aller à l'état 27
    '('      décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 77 (SelWithClassID)
